crates/account-macro/tests/account_attribute/enum.fail.stderr
error: Deriving Pod is not supported for enums
 --> tests/account_attribute/enum.fail.rs:8:1
  |
8 | #[account]
  | ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `bytemuck::Pod` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Invalid account type
 --> tests/account_attribute/enum.fail.rs:8:1
  |
8 | #[account]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `account` (in Nightly builds, run with -Z macro-backtrace for more info)
